# git2dart_binaries

./: .actrc  .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.github/: release.yml
.github/actions/build-android/: action.yml
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-windows/: action.yml
.github/actions/generate-bindings/: action.yml
.github/workflows/: android_build.yml  bindings copy.yml  bindings copy.yml.disabled  bindings.yml  build_package.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
ci/: ubuntu.sh
codex/: flutter-setup.sh
lib/: git2dart_binaries.dart
lib/src/: android_ssl_helper.dart  bindings.dart  error.dart  extensions.dart  opts_bindings.dart  util.dart
linux/: CMakeLists.txt  git2dart_binaries_plugin.cc  git2dart_plugin.cc  my_application.cc
linux/include/git2dart_binaries/: git2dart_binaries_plugin.h
macos/: git2dart_binaries.podspec
macos/Classes/: Git2dartBinariesPlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: build_libgit2_with_openssl.sh
test/: opts_bindings_integration_test.dart  util_integration_test.dart
windows/: CMakeLists.txt  git2dart_binaries_plugin.cpp  git2dart_binaries_plugin.h  git2dart_binaries_plugin_c_api.cpp  lgit2dart_plugin.cpp
windows/include/git2dart/: git2dart_plugin.h
windows/include/git2dart_binaries/: git2dart_binaries_plugin_c_api.h
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
